# case-transform

./: LICENSE  README.md  setup.cfg
case_transform/: __init__.py  case_style.py  convert_from_parts.py  split_into_parts.py  transform.py
