[metadata]
name = ivig-case-transform
version = 0.1.0
description = "This package helps to transform CamelCase to snake_case and vice versa."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iliin-ivig/case-transform

[options]
python_requires = >=3.10
packages = find:

include_package_data = False
